# rustmart-examples

./: Cargo.toml  README.md
rustmart-spair/: Cargo.toml  readme.md
rustmart-spair-with-components/: Cargo.toml  readme.md
rustmart-spair-with-components/src/: api.rs  app.rs  lib.rs  route.rs
rustmart-spair-with-components/src/pages/: home.rs  mod.rs  product_detail.rs
rustmart-spair-with-components/src/renders/: atc_button.rs  error.rs  mod.rs  product_card.rs  spinner.rs
rustmart-spair/src/: api.rs  app.rs  lib.rs  route.rs
rustmart-spair/src/pages/: home.rs  product_detail.rs
rustmart-spair/src/renders/: atc_button.rs  error.rs  mod.rs  navbar.rs  product_card.rs  spinner.rs
rustmart-yew-fewer-components/: Cargo.toml
rustmart-yew-fewer-components/src/: app.rs  lib.rs
rustmart-yew-fewer-components/src/pages/: home.rs  product_detail.rs
rustmart-yew-fewer-components/src/views/: mod.rs  navbar.rs  product_card.rs
