[package]
name = "rustmart-spair-with-components"
version = "0.1.0"
authors = ["sheshbabu <sheshbabu@gmail.com>", "aclueless <61309385+aclueless@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spair = "0.0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
